[gd_scene load_steps=7 format=3 uid="uid://cdtdg0i7uc8gh"]

[ext_resource type="Script" uid="uid://ckhd388c83cba" path="res://scripts/ui/end_of_level.gd" id="1_5m6nd"]
[ext_resource type="Script" uid="uid://bcyito35yxdei" path="res://scripts/ui/button.gd" id="3_twyrv"]
[ext_resource type="Texture2D" uid="uid://qd2ei8gqq00b" path="res://assets/ui/in-game/endgame/Replay Button.png" id="4_bd6su"]
[ext_resource type="Texture2D" uid="uid://o3h4wf8tgkkc" path="res://assets/ui/in-game/endgame/Edit Button.png" id="5_q2oaj"]
[ext_resource type="PackedScene" uid="uid://bp7lt18vh3vp7" path="res://scenes/circles.tscn" id="6_bd6su"]
[ext_resource type="Texture2D" uid="uid://bnjfrjq5rta5q" path="res://assets/ui/in-game/endgame/Return Button.png" id="6_mxr1s"]

[node name="End Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5m6nd")

[node name="BG" type="ColorRect" parent="."]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.992636, 1.02654)
color = Color(0.741176, 0.823529, 0.815686, 1)

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -338.0
offset_top = -172.5
offset_right = 338.0
offset_bottom = 172.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="ReplayButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
button_mask = 7
icon = ExtResource("4_bd6su")
flat = true
icon_alignment = 1
script = ExtResource("3_twyrv")

[node name="EditButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
button_mask = 7
icon = ExtResource("5_q2oaj")
flat = true
icon_alignment = 1
script = ExtResource("3_twyrv")

[node name="ReturnButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
button_mask = 7
icon = ExtResource("6_mxr1s")
flat = true
icon_alignment = 1
script = ExtResource("3_twyrv")

[node name="circles" parent="." instance=ExtResource("6_bd6su")]
z_index = -1

[connection signal="button_down" from="ButtonContainer/ReplayButton" to="." method="_on_replay_button_button_down"]
[connection signal="mouse_entered" from="ButtonContainer/ReplayButton" to="ButtonContainer/ReplayButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ButtonContainer/ReplayButton" to="ButtonContainer/ReplayButton" method="_on_mouse_exited"]
[connection signal="button_down" from="ButtonContainer/EditButton" to="." method="_on_edit_button_button_down"]
[connection signal="mouse_entered" from="ButtonContainer/EditButton" to="ButtonContainer/EditButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ButtonContainer/EditButton" to="ButtonContainer/EditButton" method="_on_mouse_exited"]
[connection signal="button_down" from="ButtonContainer/ReturnButton" to="." method="_on_return_button_button_down"]
[connection signal="mouse_entered" from="ButtonContainer/ReturnButton" to="ButtonContainer/ReturnButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ButtonContainer/ReturnButton" to="ButtonContainer/ReturnButton" method="_on_mouse_exited"]
